fixed the alignment

--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -156,9 +156,10 @@
 .projectscontainer {
     height: 570px;
     width: 100vw;
+    display: flex;
     background: rgb(165, 181, 207);
     border-top: 1px solid rgba(0,0,0,.7);
-    justify-content: space-around;
+    justify-content: space-between;
     flex-direction: row;
 }
 .projectscontainer h1 {
@@ -168,6 +169,7 @@
     padding-bottom: 10px;
     font-size: 50px;
     margin-left: 20vw;
+    position: absolute;
 }
 
 .projectimage {
@@ -199,18 +201,21 @@
     background-image: url('./Tepanyaki home page.PNG');
     background-position: center;
     background-size: fill;
-    zoom: 19.2%;
+    zoom: 20%;
     background-repeat: no-repeat;
     height: 50%;
     box-shadow: 0px 0px 4px rgba(0,0,0,.7);
     width: 90%;
+    margin-left: 5%;
 }
 
 .project {
+    /* transform: translateX(-50px); */
     height: 80%;
-    width: 20vw;
-    margin-left: 10vw;
-    margin-top: 10px;
+    width: 400px;
+    margin-left: 20px;
+    margin-top: 85px;
+    margin-right: 20px;
     background: white;
     box-shadow: 0px 0px 4px rgba(0,0,0,.7);
 }
@@ -467,10 +472,21 @@
 }
 
 @media(max-width: 1200px) {
+    .project:nth-child(2) {
+        display: none;
+    }
+    .project h5 {
+        font-size: 11.1px;
+    }
+    .project span {
+        font-size: 13px;
+        margin-left: 5%;
+    }
+
     .projectscontainer {
     }
     .projectscontainer h1 {
-        font-size: 50px;
+        font-size: 40px;
     }
     .aboutparagraph{
         font-size: 20px;
